dataset1235/2025-2/1153765216/users/230013788/executions/3138746197_291286518.log
== RUN (2025-08-18 23:38:19)
-- CODE: 
numero = int(input("7: "))
dobro = numero * 2
print("7:", dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
7: 7: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
7: 7: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
7: 7: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
7: 7: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
7: 7: 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 23:32:22)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("12: "))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
12:
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
12:
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
12:
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
12:
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
12:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 23:37:05)
-- CODE: 
numero = int(input("25: "))
dobro = 25 * 2
print("25:", dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
25: 25: 50
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
25: 25: 50
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
25: 25: 50
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
25: 25: 50
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
25: 25: 50
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 23:32:30)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("12 "))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
12
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
12
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
12
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
12
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 23:32:43)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("12")

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input("12")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input("12")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input("12")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input("12")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input("12")
             ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 23:37:04)
-- CODE: 
numero = int(input("25: "))
dobro = 25 * 2
print("25:", dobro)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
25: 25: 50
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
25: 25: 50
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
25: 25: 50
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
25: 25: 50
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
25: 25: 50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 23:32:39)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("12"))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
12
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
12
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
12
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
12
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 23:38:17)
-- CODE: 
numero = int(input("7: "))
dobro = numero * 2
print("7:", dobro)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
7: 7: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
7: 7: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
7: 7: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
7: 7: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
7: 7: 22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 23:32:28)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("12 "))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
12
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
12
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
12
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
12
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 23:37:35)
-- CODE: 
numero = int(input("2: "))
dobro = 2 * 2
print("25:", dobro)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
2: 25: 4
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
2: 25: 4
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
2: 25: 4
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
2: 25: 4
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
2: 25: 4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 23:35:56)
-- CODE: 
numero = int(input("25: "))
dobro = 25 * 2
print("o dobro é:", dobro)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
25: o dobro é: 50
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
25: o dobro é: 50
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
25: o dobro é: 50
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
25: o dobro é: 50
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
25: o dobro é: 50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 23:35:58)
-- CODE: 
numero = int(input("25: "))
dobro = 25 * 2
print("o dobro é:", dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
25: o dobro é: 50
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
25: o dobro é: 50
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
25: o dobro é: 50
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
25: o dobro é: 50
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
25: o dobro é: 50
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 23:32:24)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("12: "))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
12:
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
12:
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
12:
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
12:
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
12:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 23:32:38)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("12"))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
12
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
12
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
12
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
12
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 23:37:36)
-- CODE: 
numero = int(input("2: "))
dobro = 2 * 2
print("25:", dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
2: 25: 4
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
2: 25: 4
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
2: 25: 4
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
2: 25: 4
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
2: 25: 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
